--- a/CodingEventsDemo/Views/Shared/_Layout.cshtml
+++ b/CodingEventsDemo/Views/Shared/_Layout.cshtml
@@ -24,6 +24,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Events" asp-action="Index">Events</a>
+                        </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Events" asp-action="Add">New Events</a>
+                        </li>
                     </ul>
                 </div>
             </div>
