--- a/CodingEventsDemo/Views/Events/Add.cshtml
+++ b/CodingEventsDemo/Views/Events/Add.cshtml
@@ -1,4 +1,4 @@
-﻿<h1>Add Event</h1>
+﻿<h1>@ViewBag.title</h1>
 
 @if (ViewBag.error == "ERROR")
 {
@@ -9,6 +9,6 @@
     <h2>Name of Event</h2>
     <input name="name" type="text" />
     <h2>Info of Event</h2>
-    <input name="info" type="text" />
+    <input name="description" type="text" />
     <input type="submit" value="Add Event" />
 </form>
