--- a/CodingEventsDemo/Views/Shared/_Layout.cshtml
+++ b/CodingEventsDemo/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                         <li>
                             <a class="nav-link text-dark" asp-area="" asp-controller="Events" asp-action="Add">New Events</a>
                         </li>
+                        <li>
+                            <a class="nav-link text-dark" aps-area="" asp-controller="Events" asp-action="Delete">Remove Events</a>
+                        </li>
                     </ul>
                 </div>
             </div>
