--- a/CodingEventsDemo/Views/Events/Delete.cshtml
+++ b/CodingEventsDemo/Views/Events/Delete.cshtml
@@ -1,12 +1,10 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@using CodingEventsDemo.Models
+
+@model List<Event>;
 
 <h1>Delete Events</h1>
 <form method="post">
-    @foreach(var evt in ViewBag.events)
+    @foreach(var evt in Model)
     {
         <div class="form-group">
             <label>
