--- a/CodingEventsDemo/Views/Events/Index.cshtml
+++ b/CodingEventsDemo/Views/Events/Index.cshtml
@@ -1,6 +1,18 @@
-﻿<h1>Coding Events</h1>
+﻿@using CodingEventsDemo.Models
 
-@if (ViewBag.events.Count == 0)
+@model List<Event>
+
+<h1>Coding Events</h1>
+
+<p>
+    <a class="nav-link text-dark" asp-area="" asp-controller="Events" asp-action="Add">New Events</a>
+</p>
+
+<p>
+    <a class="nav-link text-dark" aps-area="" asp-controller="Events" asp-action="Delete">Remove Events</a>
+</p>
+
+@if (Model.Count == 0)
 {
     <p>No events yet!</p>
 }
@@ -11,13 +23,15 @@ else
             <th>ID</th>
             <th>Event Name</th>
             <th>Event Info</th>
+            <th>Contact Email</th>
         </tr>
-        @foreach (var meeting in ViewBag.events)
+        @foreach (var meeting in Model)
             {
                 <tr>
                     <td>@meeting.Id</td>
                     <td>@meeting.Name</td>
                     <td>@meeting.Description</td>
+                    <td>@meeting.ContactEmail</td>
                     <td><a asp-controller="Events" asp-action="Edit" asp-route-id="@meeting.Id">Edit Event</a></td>
                 </tr>
             }
