--- a/CodingEventsDemo/Views/Events/Add.cshtml
+++ b/CodingEventsDemo/Views/Events/Add.cshtml
@@ -26,5 +26,11 @@
         <input asp-for="ContactEmail" />
         <span class="text-danger" asp-validation-for="ContactEmail"></span>
     </div>
+
+    <div class="form-group">
+        <label asp-for="Type">Event Types</label>
+        <select asp-for="Type" asp-items="Model.EventTypes"></select>
+    </div>
+
     <input type="submit" value="Add Event" />
 </form>
