--- a/CodingEventsDemo/Views/Events/Index.cshtml
+++ b/CodingEventsDemo/Views/Events/Index.cshtml
@@ -5,11 +5,11 @@
 <h1>Coding Events</h1>
 
 <p>
-    <a class="nav-link text-dark" asp-area="" asp-controller="Events" asp-action="Add">New Events</a>
+    <a asp-area="" asp-controller="Events" asp-action="Add">New Events</a>
 </p>
 
 <p>
-    <a class="nav-link text-dark" aps-area="" asp-controller="Events" asp-action="Delete">Remove Events</a>
+    <a aps-area="" asp-controller="Events" asp-action="Delete">Remove Events</a>
 </p>
 
 @if (Model.Count == 0)
@@ -24,6 +24,7 @@ else
             <th>Event Name</th>
             <th>Event Info</th>
             <th>Contact Email</th>
+            <th>Event Type</th>
         </tr>
         @foreach (var meeting in Model)
             {
@@ -32,6 +33,7 @@ else
                     <td>@meeting.Name</td>
                     <td>@meeting.Description</td>
                     <td>@meeting.ContactEmail</td>
+                    <td>@meeting.Type</td>
                     <td><a asp-controller="Events" asp-action="Edit" asp-route-id="@meeting.Id">Edit Event</a></td>
                 </tr>
             }
